[package]
name = "road"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.30", features = ["derive"] }
ezio = "0.1.2"
serde = { version = "1.0.151", features = ["derive"] }
toml = "0.5.10"
